--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body id="root">
-  
+  <main>
+    <div class="ok" id="yes"></div>
+  </main>
 </body>
 </html>
